--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/theregularexpress.css">
     <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Roboto+Slab:300,400' rel='stylesheet' type='text/css'>
+    <link rel="icon" href="/assets/favicon.ico">
   </head>
   <body>
 
